--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
+<style>
+  #div {
+    background: red;
+  }
+  .div {
+    background: red;
+  }
+</style>
+
 <html>
   <head>
     <title>Hello</title>
   </head>
   <body>
-    BEACH
+    <div id="up"></div>
   </body>
 </html>
