--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <style>
-  div {
+  #up {
     background: red;
   }
-  .div {
+  .up {
     background: red;
   }
 </style>
@@ -12,6 +12,6 @@
     <title>Hello</title>
   </head>
   <body>
-    <div id="up"></div>
+    <div id="up" class="up"></div>
   </body>
 </html>
