--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <style>
   #up {
     background: red;
+    width: 100px;
+    height: 100px;
   }
   .up {
     background: red;
+    height: 100px;
+    width: 100px;
   }
 </style>
 
