--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <title>Hello</title>
   </head>
   <body>
-    <div id="up" class="up"></div>
+    <div id="up" class="up">
+      HELLO
+    </div>
   </body>
 </html>
