--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
     width: 100px;
   }
   body {
-    border-radius: 4px;
+    border-style: solid;
+    border-width: 1px;
+    border-top-color: red;
+    border-left-color: red;
+    border-right-color: white;
+    border-bottom-color: white;
   }
 </style>
 
