--- a/index.html
+++ b/index.html
@@ -4,18 +4,13 @@
     width: 100px;
     height: 100px;
   }
-  .up {
-    background: red;
-    height: 100px;
-    width: 100px;
-  }
   body {
     border-style: solid;
-    border-width: 1px;
+    border-width: 15px;
     border-top-color: red;
-    border-left-color: red;
+    border-left-color: white;
     border-right-color: white;
-    border-bottom-color: white;
+    border-bottom-color: red;
   }
 </style>
 
