--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <style>
   #up {
     background: red;
-    width: 100px;
-    height: 100px;
+    width: 100%;
+    height: 50px;
   }
   body {
     border-style: solid;
