--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <style>
   #up {
+    color: white;
     background: red;
     width: 100%;
     height: 50px;
@@ -8,19 +9,19 @@
     border-style: solid;
     border-width: 15px;
     border-top-color: red;
-    border-left-color: white;
-    border-right-color: white;
+    border-left-color: maroon;
+    border-right-color: maroon;
     border-bottom-color: red;
   }
 </style>
 
 <html>
   <head>
-    <title>Hello</title>
+    <title>Foko's</title>
   </head>
   <body>
     <div id="up" class="up">
-      HELLO
+      <STRONG>Welcome!</STRONG>
     </div>
   </body>
 </html>
