--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     height: 50px;
   }
   body {
+    height: 100%;
+    width:100%;
     border-style: solid;
     border-width: 15px;
     border-top-color: red;
