--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   #up {
     color: white;
     background: red;
-    width: 100%;
+    width: 95%;
     height: 50px;
   }
   body {
@@ -15,6 +15,9 @@
     border-right-color: maroon;
     border-bottom-color: red;
   }
+  .scroll-container {
+    scroll-padding: 50px 0 0 50px;
+  }
 </style>
 
 <html>
@@ -25,5 +28,8 @@
     <div id="up" class="up">
       <STRONG>Welcome!</STRONG>
     </div>
+    <center><div class="scroll-container">
+      
+    </div></center>
   </body>
 </html>
