--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
       <STRONG>Welcome!</STRONG>
     </div>
     <center><div class="scroll-container">
-      
+      hello
+      hellotoo
     </div></center>
   </body>
 </html>
