--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     border-bottom-color: red;
   }
   .scroll-container {
-    scroll-padding: 50px 0 0 50px;
+    scroll-padding: 500px 0 0 500px;
   }
 </style>
 
@@ -28,9 +28,9 @@
     <div id="up" class="up">
       <STRONG>Welcome!</STRONG>
     </div>
-    <center><div class="scroll-container">
+    <div class="scroll-container">
       hello
       hellotoo
-    </div></center>
+    </div>
   </body>
 </html>
