--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
       <STRONG>Welcome!</STRONG>
     </div>
     <div class="scroll-container">
-      hello
-      hellotoo
+      <p>hello</p>
     </div>
   </body>
 </html>
