--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
   height: 700px;
   scroll-snap-align: start;
   scroll-snap-stop: normal;
-  color: white;
+  color: black;
   font-size: 50px;
   display: flex;
   justify-content: center;
   align-items: top;
-  background: #696969;
+  background: #6d4d4d4;
 }
 
 
@@ -163,8 +163,6 @@
     border: 8px solid gray;
     border-radius:16px;
     display: flex;
-    bottom: 65px;
-    right: 90px;
     position: relative;
     height: 350px;
     width: 450px;
