--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     border: 8px solid gray;
     border-radius:16px;
     display: flex;
-    position: relative;
+    position: absolute;
     height: 350px;
     width: 450px;
 
