--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 }
 
 .element {
-  border: 8px solid gray;
+  border: 8px solid #949292;
   border-radius: 64px;
   width: 600px;
   height: 700px;
@@ -159,7 +159,7 @@
   }
   .imageHolder {
 
-    border: 8px solid gray;
+    border: 8px solid #949292;
     border-radius:16px;
     display: flex;
     position: absolute;
