--- a/index.html
+++ b/index.html
@@ -47,6 +47,16 @@
   justify-content: center;
   align-items: top;
   background: #bfbfbf;
+  transition: 0.5s;
+	opacity: 0.7;
+}
+
+.element:hover {
+  width: 650px;
+  height: 750px;
+	right: 50px;
+	bottom: 50px;
+	opacity: 1;
 }
 
 
