--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
   .title {
     top: 35px;
     left: 250px;
-    position:absolute;
+    position:relative;
     justify-content: center;
     font-size: 64px;
   }
@@ -172,7 +172,7 @@
     border: 8px solid #949292;
     border-radius:16px;
     display: flex;
-    position: absolute;
+    position: relative;
     height: 300px;
     width: 450px;
     bottom: 250px;
