--- a/index.html
+++ b/index.html
@@ -149,10 +149,11 @@
   }
 
   .text {
-    top:386;
+    top:415px;
+    right: 520px;
     white-space: pre-wrap;
     padding: 12;
-    width:500px;
+    width:800px;
     height: 700px;
     display: flex;
     position: relative;
@@ -161,14 +162,16 @@
     font-size: 18px;
   }
   .title {
-    top: 35px;
-    left: 250px;
+    bottom: 55px;
+    left: 225px;
     position:relative;
     justify-content: center;
     font-size: 64px;
   }
   .imageHolder {
 
+    top: 90px;
+    right: 50px;
     border: 8px solid #949292;
     border-radius:16px;
     display: flex;
