--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
 		linkElement.appendChild(Greg);
 
-		Element.appendChild(linkElement);
+		//Element.appendChild(linkElement);
 
 		bod.appendChild(Element);
 
