--- a/index.html
+++ b/index.html
@@ -150,12 +150,12 @@
 
   .text {
     top:415px;
-    right: 520px;
+    right: 420px;
     white-space: pre-wrap;
-    padding: 12;
-    width:800px;
-    height: 700px;
-    display: flex;
+    padding: 12; 
+    min-width: 250px;
+    height: 700px; 
+    display: inline-block;
     position: relative;
     justify-content: left;
     item-align: center;
@@ -163,7 +163,7 @@
   }
   .title {
     bottom: 55px;
-    left: 225px;
+    left: 325px;
     position:relative;
     justify-content: center;
     font-size: 64px;
@@ -171,7 +171,7 @@
   .imageHolder {
 
     top: 90px;
-    right: 50px;
+    left: 20px;
     border: 8px solid #949292;
     border-radius:16px;
     display: flex;
@@ -181,6 +181,7 @@
     bottom: 250px;
 
   }
+
 </style>
 
 <html>
