--- a/index.html
+++ b/index.html
@@ -175,13 +175,13 @@
     item-align: center;
     font-size: 18px;
   }
-  .link:link {
-    color: #b1b5b2;
+  a:link {
+    color: #a1a1a1;
   }
-  .link:visited {
+  a:visited {
     color: #575757;
   }
-  .link:hover {
+  a:hover {
     color: #dbdbdb;
   }
 
