--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     right: 310px;
     white-space: pre-wrap;
     padding: 12; 
-    min-width: 250px;
+    min-width: 550px;
     height: 700px; 
     display: inline-block;
     position: relative;
@@ -267,9 +267,11 @@
 
 		Element.appendChild(linkElement);
 
-		bod.appendChild(Element);
+		sleep(0.01).then(() => {
+			bod.appendChild(Element);
 
-		console.log("DONE!");
+		        console.log("DONE!");
+		})
 	}
 	function readJson(jsonDir) {
   	fetch(jsonDir)
