--- a/index.html
+++ b/index.html
@@ -129,10 +129,11 @@
   top: calc(360px / 2 - 100px / 2 + 2px);
 }
 #up {
+	  font-size: 32;
     color: white;
     background: red;
     width: 100%;
-    height: 50px;
+    height: 80px;
   }
   body {
     height: 96%;
@@ -188,7 +189,8 @@
 	
   .title {
     bottom: 55px;
-    left: 625px;
+    left: 525px;
+    min-width: 450px;
     position:relative;
     justify-content: center;
     font-size: 64px;
@@ -217,7 +219,7 @@
   </head>
   <body>
     <div id="up" class="up">
-      <STRONG>Welcome!</STRONG>
+      <STRONG>Alola!</STRONG>
     </div>
     <div class="container both-scroll both-mandatory padding-50px">
       <div class="wrapper" id="bod">
