--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
   .link {
     top:600px;
-    right: 480px;
+    right: 680px;
     white-space: pre-wrap;
     padding: 12; 
     min-width: 250px;
@@ -189,7 +189,7 @@
 	
   .title {
     bottom: 55px;
-    left: 475px;
+    left: 150px;
     min-width: 450px;
     position:relative;
     justify-content: center;
@@ -199,13 +199,13 @@
   .imageHolder {
 
     top: 90px;
-    left: 350px;
+    left: 150px;
     border: 8px solid #949292;
     border-radius:16px;
     display: flex;
     position: relative;
     height: 300px;
-    width: 450px;
+    min-width: 450px;
     bottom: 250px;
 
   }
