--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <style>
+  
   .no-support {
   text-align: center;
   padding: 5px;
@@ -165,7 +166,7 @@
 
   .link {
     top:600px;
-    right: 680px;
+    right: 780px;
     white-space: pre-wrap;
     padding: 12; 
     min-width: 250px;
@@ -177,19 +178,19 @@
     font-size: 18px;
   }
   a:link {
-    color: #a1a1a1;
+    color: #00f7ff;
   }
   a:visited {
-    color: #575757;
+    color: #59748f;
   }
   a:hover {
-    color: #dbdbdb;
+    color: #00ffc3;
   }
 
 	
   .title {
     bottom: 55px;
-    left: 150px;
+    left: 750px;
     min-width: 450px;
     position:relative;
     justify-content: center;
@@ -199,7 +200,7 @@
   .imageHolder {
 
     top: 90px;
-    left: 150px;
+    left: 250px;
     border: 8px solid #949292;
     border-radius:16px;
     display: flex;
@@ -209,6 +210,7 @@
     bottom: 250px;
 
   }
+
 
 </style>
 
