--- a/index.html
+++ b/index.html
@@ -299,4 +299,13 @@
 		
 	}
 readDefault("public/jsons.json");
+const dark_mode = false;
+function darkMode() {
+	dark_mode = !dark_mode;
+	if (dark_mode) {
+		document.body.style.backgroundColor = "black";
+	} else {
+		document.body.style.backgroundColor = "white";
+	}
+}
 </script>
