--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@
   <body>
     <div id="up" class="up">
       <STRONG>Alola!</STRONG>
+      <button onclick="dark_mode"> DarkMode</button>
     </div>
     <div class="container both-scroll both-mandatory padding-50px">
       <div class="wrapper" id="bod">
