--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<style>
+e<style>
   
   .no-support {
   text-align: center;
@@ -222,7 +222,7 @@
   <body>
     <div id="up" class="up">
       <STRONG>Alola!</STRONG>
-      <button onclick="dark_mode"> DarkMode</button>
+      <button onclick="darkMode"> DarkMode</button>
     </div>
     <div class="container both-scroll both-mandatory padding-50px">
       <div class="wrapper" id="bod">
@@ -300,7 +300,7 @@
 		
 	}
 readDefault("public/jsons.json");
-const dark_mode = false;
+let dark_mode = false;
 function darkMode() {
 	dark_mode = !dark_mode;
 	if (dark_mode) {
