--- a/index.html
+++ b/index.html
@@ -303,6 +303,7 @@ readDefault("public/jsons.json");
 let dark_mode = false;
 function darkMode() {
 	dark_mode = !dark_mode;
+	Console.log(dark_mode);
 	if (dark_mode) {
 		document.body.style.backgroundColor = "black";
 	} else {
