--- a/index.html
+++ b/index.html
@@ -311,11 +311,11 @@ function darkMode() {
 	if (dark_mode) {
 		document.body.style.backgroundColor = "black";
 		
-		document.body.style.borderTopColor= "#c900b2";
-    		document.body.style.borderLeftColor= "#8f007e";
-    		document.body.style.borderRightColor= "#8f007e";
-    		document.body.style.borderBottomColor= "#c900b2";
-		document.getElementById("up").style.backgroundColor="#c900b2";
+		document.body.style.borderTopColor= "#5c5c5c";
+    		document.body.style.borderLeftColor= "#424242";
+    		document.body.style.borderRightColor= "#424242";
+    		document.body.style.borderBottomColor= "#5c5c5c";
+		document.getElementById("up").style.backgroundColor="#5c5c5c";
 
 		document.body.style.color = "white";
 		
