--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
   <body>
     <div id="up" class="up">
       <STRONG>Alola!</STRONG>
-      <button onclick="darkMode()" id="modebutton">🌙</button>
+      <right><button onclick="darkMode()" id="modebutton">🌙</button></right>
     </div>
     <div class="container both-scroll both-mandatory padding-50px">
       <div class="wrapper" id="bod">
