--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@ function darkMode() {
 		document.getElementById("up").style.backgroundColor="#5c5c5c";
 
 		document.body.style.color = "white";
-		documents.getElementById("modebutton").innerHTML="☀";
+		documents.getElementById("modebutton").textContent="☀";
 	} else {
 		document.body.style.color = "black";
 		document.body.style.backgroundColor = "white";
@@ -327,7 +327,7 @@ function darkMode() {
     		document.body.style.borderRightColor = "maroon";
     		document.body.style.borderBottomColor = "red";
 		document.getElementById("up").style.backgroundColor="red";
-		documents.getElementById("modebutton").innerHTML="🌙";
+		documents.getElementById("modebutton").textContent="🌙";
 
 	}
 }
