--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
   </head>
   <body>
     <div id="up" class="up">
-      <STRONG>Foko's "post-note"/main page</STRONG>
+      <STRONG>Foko's place - post notes</STRONG>
       <right><button onclick="darkMode()" id="modebutton">🌙</button></right>
     </div>
     <div class="container both-scroll both-mandatory padding-50px">
